# geoscope

./: .gitignore  Cargo.toml  PROGRESS.md  README.md
.cargo/: config.toml
docs/: DESIGN_REVIEW.md  MOCKUP_GUIDE.md  PRD.md  ROADMAP.md
samples/: README.md  download.sh  rossby_haurwitz_sample.nc
src/: app.rs  i18n.rs  main.rs
src/codegen/: cmd_palette.rs  mod.rs  parser.rs  python.rs  rhai_engine.rs
src/copilot/: context.rs  llm_client.rs  mod.rs
src/data/: inference.rs  mod.rs  spectral_filter.rs  temporal_filter.rs  trajectory_loader.rs
src/mcp/: listener.rs  mod.rs
src/renderer/: bitmap_font.rs  common.rs  contour.rs  cross_section.rs  export.rs  globe.rs  hovmoller.rs  map.rs  mod.rs  profile.rs  spectrum.rs  streamline.rs  trajectory.rs  vector_overlay.rs
src/ui/: mod.rs
