[package]
name = "geoscope"
version = "0.1.0"
edition = "2024"
authors = ["daktu32"]
description = "GFD data visualization desktop application"
license = "MIT"
repository = "https://github.com/daktu32/geoscope"
keywords = ["gfd", "visualization", "netcdf", "spectral-method"]
categories = ["visualization", "science"]

[dependencies]
eframe = { version = "0.33", features = ["wgpu"] }
egui = "0.33"
egui_dock = "0.18"
egui-wgpu = "0.33"
wgpu = "27"
netcdf = "0.12"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
