[package]
name = "geoscope"
version = "0.1.0"
edition = "2024"
authors = ["daktu32"]
description = "GFD data visualization desktop application"
license = "MIT"
repository = "https://github.com/daktu32/geoscope"
keywords = ["gfd", "visualization", "netcdf", "spectral-method"]
categories = ["visualization", "science"]

[dependencies]
eframe = { version = "0.33", features = ["wgpu", "persistence"] }
serde = { version = "1", features = ["derive"] }
egui = "0.33"
egui_dock = "0.18"
egui-wgpu = "0.33"
wgpu = "27"
netcdf = "0.12"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
gif = "0.13"
rfd = "0.15"
log = "0.4"
env_logger = "0.11"
ispack-rs = { path = "../ispack-rs", package = "ispack-rs" }
num-complex = "0.4"
serde_json = "1"
